--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,4 +1,4 @@
-theme = "hugo-tailwindcss-starter-theme"
+theme = "windy"
 languageCode = "en-us"
 baseurl = "http://example.com/"
 title = "Hugo Tailwindcss Starter"
